ROX-32760: Remove the addon reconciliation logic
