# internal/central/pkg/api/private/model_data_plane_cluster_update_status_request.go
@@ -1,16 +1,0 @@
-/*
- * Red Hat Advanced Cluster Security Service Fleet Manager
- *
- * Red Hat Advanced Cluster Security (RHACS) Service Fleet Manager APIs that are used by internal services e.g fleetshard-sync.
- *
- * API version: 1.4.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech). DO NOT EDIT.
-package private
-
-// DataPlaneClusterUpdateStatusRequest Schema for the request to update a data plane cluster's status
-type DataPlaneClusterUpdateStatusRequest struct {
-	Addons []DataPlaneClusterUpdateStatusRequestAddons `json:"addons,omitempty"`
-}
